Due to ingress.com/intel now force-redirecting to the HTTPS version, loading dependencies just got a lot harder. External JS and CSS files are now included directly in the file while building. This does not yet work for plugins. I will make an emergency release soon, so at least main works.

--- a/mobile/IngressIntelTC/assets/js/ingressSplash.html
+++ b/mobile/IngressIntelTC/assets/js/ingressSplash.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Ingress Intel Total Converion - Mobile &amp; Tablet</title>
-	<style>	
+	<style>
 	.logo {
 		position:absolute; width:128px; height:128px;
 		top:50%; left:50%; margin: -128px 0 0 -64px;
@@ -79,9 +79,9 @@ window.animTitle = {
 			this.titleElements[e].className = "active done";
 		}
 
-		setTimeout( function() { 
-			document.body.appendChild(subTitle); 
-			android.loadBehind('http://www.ingress.com/intel'); 
+		setTimeout( function() {
+			document.body.appendChild(subTitle);
+			android.loadBehind('https://www.ingress.com/intel');
 		}, 3000);
 	},
 }
